Fixed align issue

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -10,6 +10,12 @@
   margin: 2rem auto;
 }
 
+.experience-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .options {
   display: flex;
   flex-direction: row;
