--- a/src/components/proj/proj.css
+++ b/src/components/proj/proj.css
@@ -36,6 +36,19 @@
       0 5px 0 0 rgba(204, 204, 204, 0.3);
   }
   
+  .cards-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 3rem;
+    width: 100%;
+  }
+  
+  .proj-content > h2 {
+    text-align: left;
+  }
+
+  
   .text-content {
     display: flex;
     flex-direction: column;
